# git2kit

./: Cargo.toml  README.md
src/: error.rs  lib.rs  origin.rs  resolve.rs  settings.rs  sync.rs
src/repository/: add.rs  clone.rs  commit.rs  create_branch.rs  create_unborn.rs  default_branch_for_remote.rs  default_remote.rs  fast_forward.rs  fetch.rs  find_last_commit.rs  head_branch.rs  head_status.rs  init.rs  init_bare.rs  mod.rs  open.rs  pull.rs  push.rs  resolve.rs  status.rs  switch.rs  switch_branch.rs  sync.rs  try_default_branch.rs  try_open.rs  upstream_status.rs  working_tree_status.rs
